<resources>
    <string name="app_name">WeatherNow</string>

    <string name="device_offline">Make sure your device is connected to the internet</string>
    <string name="empty_search">Search text can not be empty</string>
    <string name="today">Today</string>
    <string name="max_temp">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="permision_available_location">Location Permissions have been granted. Showing current Weather.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="data_not_available">Data not available!!</string>
    <string name="recent_search_history">Search History</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="weather_state_icon">Weather State Icon</string>
    <string name="hamburger_icon">Hamburger Icon</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    <string name="humidity_adapter">HUMIDITY %d%%</string>

</resources>
