<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/get_weather_1"
            android:title="@string/first"
            android:visible="false"
            />
        <item
            android:id="@+id/get_weather_2"
            android:title="@string/second"
            android:visible="false" />
        <item
            android:id="@+id/get_weather_3"
            android:title="@string/third"
            android:visible="false" />
        <item
            android:id="@+id/get_weather_4"
            android:title="@string/fourth"
            android:visible="false" />
        <item
            android:id="@+id/get_weather_5"
            android:title="@string/fifth"
            android:visible="false" />

    </group>
</menu>